--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -813,7 +813,7 @@ a {
     p {
       max-width: 800px;
       vertical-align: middle;
-      font-size: .5em;
+      font-size: .7em;
       padding: 12px;
       text-align: left;
       display: inline-block;
@@ -1060,7 +1060,7 @@ a {
 
   .review-carousel {
     .slick-track {
-      height: 375px;
+      height: 300px;
     }
   }
 
@@ -1156,7 +1156,7 @@ a {
     .review::before {
       display: none;
     }
-    padding: 28px 12px;
+    padding: 12px;
     .inner {
       img {
         margin-top: 3px;;
