--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -256,7 +256,7 @@ a {
 
 .review-carousel {
   .slick-track {
-    height: 150px;
+    height: 155px;
   }
 }
 
@@ -992,6 +992,38 @@ a {
   overflow: hidden;
 }
 
+@media screen and (max-width: 1100px) {
+  .review-carousel {
+    .slick-track {
+      height: 300px;
+    }
+  }
+  .review-slideshow {
+    padding: 0;
+    .review {
+      padding-top: 0;
+      display: flex;
+      align-items: center;
+    }
+    .review::before {
+      display: none;
+    }
+    padding: 12px;
+    .inner {
+      img {
+        margin-top: 3px;;
+        max-width: 35%;
+      }
+      p {
+        width: 100%;
+        max-width: 100%;
+        text-align: center;
+        padding: 0;
+      }
+    }
+  }
+}
+
 @media screen and (max-height: 700px) {
   .service-detail {
     width: 100% !important;
@@ -1148,29 +1180,6 @@ a {
     }
   }
 
-  .review-slideshow {
-    .review {
-      display: flex;
-      align-items: center;
-    }
-    .review::before {
-      display: none;
-    }
-    padding: 12px;
-    .inner {
-      img {
-        margin-top: 3px;;
-        max-width: 35%;
-      }
-      p {
-        width: 100%;
-        max-width: 100%;
-        text-align: center;
-        padding: 0;
-      }
-    }
-  }
-
   .desktop-nav {
     display: none;
   }
@@ -1201,7 +1210,7 @@ a {
         font-size: 52px;
       }
       .contact-body {
-        padding: 0;
+        padding-left: 12px;
         font-size: .95em;
         > ul {
           padding-left: 0;
