--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1193,6 +1193,7 @@ a {
   }
 
   #contact-us-home-section {
+    font-size: .9em;
     position: relative;
     .contact-us-gmap-container {
       display: none;
