--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -2,144 +2,239 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-<style type="text/css">
-	.address {
-				color:#484747 !important;
-				display:block;
-				font-family:'Lato', sans-serif;
-				font-size:24px;
-				font-style:normal;
-				font-weight:light;
-				line-height:100%;
-				letter-spacing:normal;
-				margin-top:0;
-				margin-right:0;
-				margin-bottom:10px;
-				margin-left:0;
-				text-align:left;
-			}
-			.address_city {
-				color:#484747 !important;
-				display:block;
-				font-family:'Lato', sans-serif;
-				font-size:42px;
-				font-style:normal;
-				font-weight:regular;
-				line-height:100%;
-				letter-spacing:normal;
-				margin-top:0;
-				margin-right:0;
-				margin-bottom:10px;
-				margin-left:0;
-				text-align:left;
-			}
-			.bodyContent{
-				color:#737373;
-				font-family:'Lato', sans-serif;
-				font-size:20px;
-				line-height:140%;
-				padding-top:20px;
-				padding-right:50px;
-				padding-bottom:20px;
-				padding-left:50px;
-				/*@editable*/ text-align:left;
-			}
-			.amenities {
-				color:#5e5e5e;
-				font-family:'Lato', sans-serif;
-				font-size:22px;
-				font-weight:700;
-				line-height:140%;
-			}
-			.amenities2 {
-				color:#989899;
-				font-family:'Lato', sans-serif;
-				font-size:22px;
-				font-weight:200;
-				line-height:140%;
-				font-style:italic;
-			}
-			.2column_image {
-				margin-right:1px !important;
-				float:left;
-			}
-			.a_icons {
-				padding-right:12px;
-			}
-		</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Untitled Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <style type="text/css">
+        body {
+          font-family:'Lato', sans-serif;
+        }
+        .address {
+            color:#484747 !important;
+            display:block;
+            font-family:'Lato', sans-serif;
+            font-size:24px;
+            font-style:normal;
+            font-weight:light;
+            line-height:100%;
+            letter-spacing:normal;
+            margin-top:0;
+            margin-right:0;
+            margin-bottom:10px;
+            margin-left:0;
+            text-align:left;
+        }
+        .address_city {
+            color:#484747 !important;
+            display:block;
+            font-family:'Lato', sans-serif;
+            font-size:42px;
+            font-style:normal;
+            font-weight:regular;
+            line-height:100%;
+            letter-spacing:normal;
+            margin-top:0;
+            margin-right:0;
+            margin-bottom:10px;
+            margin-left:0;
+            text-align:left;
+        }
+        .bodyContent{
+            color:#737373;
+            font-family:'Lato', sans-serif;
+            font-size:20px;
+            line-height:140%;
+            padding-top:20px;
+            padding-right:50px;
+            padding-bottom:20px;
+            padding-left:50px;
+            /*@editable*/ text-align:left;
+        }
+        .amenities {
+            color:#5e5e5e;
+            font-family:'Lato', sans-serif;
+            font-size:22px;
+            font-weight:700;
+            line-height:140%;
+        }
+        .amenities2 {
+            color:#989899;
+            font-family:'Lato', sans-serif;
+            font-size:22px;
+            font-weight:200;
+            line-height:140%;
+            font-style:italic;
+        }
+        .2column_image {
+            margin-right:1px !important;
+            float:left;
+        }
+        .a_icons {
+            padding-right:12px;
+        }
+        .headerContent {
+          position: relative;
+        }
+        .details-button {
+          position: absolute;
+          bottom: 5px;
+          left: 33px;
+          width: 200px;
+          border-radius: 500px;
+          margin-top: 22px;
+          font-weight: 500;
+          font-size: 22px;
+          color: white;
+          background-color: #d46049;
+          border-color: #c04d3a;
+          border-style: solid;
+          border-width: thin;
+          padding: 16px 26px;
+          text-transform: uppercase;
+          text-decoration: none;
+          text-align: center;
+        }
+
+        .listing-label {
+          position: absolute;
+          right: 0px;
+          top: -8px;
+          font-family:'Lato', sans-serif;
+          font-size: 26px;
+          color: white;
+          padding: 8px 37px;
+        }
+        .rent-label {
+          background-color: #d46049;
+        }
+        .lease-label {
+          background-color: #3678c6;
+        }
+    </style>
 </head>
 
 <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
 
-<table width="100%%" border="0" cellpadding="0" cellspacing="0" bgcolor="#f9f9f9" style="margin:0px; padding:0px">
-  <tr>
-    <td>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#f9f9f9" style="margin:0px; padding:0px">
+        <tr>
+            <td>
 
-            <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center" id="templateHeader" bgcolor="#ffffff" style="background-color:#ffffff">
-                                    	<tr>
-                                        <td width="50" height="54"></td>
-                                        <td width="362" height="54"><img src="img/gs-newsletter-s1.jpg" width="362" height="54" alt="Groundsource Logo" /></td>
-                                        <td width="438" class="bodyContent" style="text-align:right" valign="top" height="54"><img src="img/gs-newsletter-s2.jpg" width="31" height="31" alt="Phone Icon" />1 (800) 888-888888</td>
-                                        <td width="50px" height="54">&nbsp;</td>
-                                        </tr>
-                                        <tr>
-                                            <td valign="top" class="headerContent" colspan="5">
-                                            	<img src="img/gs-newsletter-s3.jpg" style="max-width:900px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
-                                            </td>
-                                        </tr>
-                                    </table>
-
-    </td>
-  </tr>
-                        	<tr>
-                            	<td align="center" valign="top">
-                                	<!-- BEGIN BODY // -->
-                                    <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
-                                        <tr>
-                                        <td width="50px"></td>
-                                            <td width="800px" valign="top" class="bodyContent">
-                                                <span class="address">1340 Ventura Boulevard,</span>
-                                                <span class="address_city"><b>SHERMAN</b> OAKS</span>
-                                                In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
-                                            </td>
-                                            <td width="50px"></td>
-                                        </tr>
-                                    	<tr>
-                                        	<td width="50px"></td>
-                                        	<td width="800px">
-                                            	<span class="2column_image"><img src="img/gs-newsletter-s4.jpg" width="399" height="300" class="2column_image" /></span>
-                                                <img src="img/gs-newsletter-s5.jpg" width="399" height="300" />
-                                            </td>
-                                            <td width="50px"></td>
-                                        </tr>
-                                    </table>
-                                    <!-- // END BODY -->
-                                </td>
-  </tr>
-                        	<tr>
-                            	<td align="center" valign="top">
-                                	<!-- BEGIN BODY // -->
-                                    <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
-                                        <tr>
-                                        <td width="50px"></td>
-                                            <td width="400px" valign="top" class="bodyContent">
-                                            	<img src="img/gs-newsletter-icon-1.png" width="54" height="54" alt="Rate" /> <span class="amenities">$3.00 - 3.25 per RSF / NNN</span>
-                                                <span class="amenities2">(taxes are $0.07 PSF)</span>
-                                            </td>
-                                          <td width="400px" valign="top" class="bodyContent">
-                                                <span class="address">1340 Ventura Boulevard,</span>
-                                                <span class="address_city"><b>SHERMAN</b> OAKS</span>
-                                                In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
-                                          </td>
-                                            <td width="50px"></td>
-                                        </tr>
-                                    </table>
-                                    <!-- // END BODY -->
-                                </td>
-</table>
-
-</body>
-</html>
+                <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center" id="templateHeader" bgcolor="#ffffff" style="background-color:#ffffff">
+                    <tr>
+                        <td width="50" height="54"></td>
+                        <td width="362" height="54"><img src="/images/newsletter/img/gs-newsletter-s1.jpg" width="362" height="54" alt="Groundsource Logo" /></td>
+                        <td width="438" class="bodyContent" style="text-align:right" valign="top" height="54"><img src="/images/newsletter/img/gs-newsletter-s2.jpg" width="31" height="31" alt="Phone Icon" />{{site.data.contact.phone}}</td>
+                        <td width="50px" height="54">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td valign="top" class="headerContent" colspan="5">
+                          {% if page.lease %}
+                            <div class="listing-label lease-label">For Lease</div>
+                          {% endif %}
+                          {% if page.sale %}
+                            <div class="listing-label rent-label">For Sale</div>
+                          {% endif %}
+                          <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html"><div class="details-button">View Details</div></a>
+                          <img src="{{page.property-header}}" style="max-width:900px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td align="center" valign="top">
+                <!-- BEGIN BODY // -->
+                <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
+                    <tr>
+                        <td width="50px"></td>
+                        <td width="800px" valign="top" class="bodyContent">
+                            <span class="address">{{page.address-line-1}}</span>
+                            <span class="address_city"><b>{{page.address-line-2}}</span>
+                            {{page.info-text}}
+                        </td>
+                        <td width="50px"></td>
+                    </tr>
+                    <tr>
+                        <td width="50px"></td>
+                        <td width="800px">
+                            {% if page.gallery-images[0] %}
+                              <span class="2column_image"><img src="{{ page.gallery-images[0] }}" width="399" height="300" class="2column_image" /></span>
+                            {% endif %}
+                            {% if page.gallery-images[1] %}
+                              <img src="{{ page.gallery-images[1] }}" width="399" height="300" />
+                            {% endif %}
+                        </td>
+                        <td width="50px"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+          <td align="center" valign="top">
+              <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
+                <!-- BEGIN BODY // -->
+                <!-- <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;"> -->
+                    <tr>
+                      <td width="50px"></td>
+                      <td width="400px" valign="top" class="bodyContent">
+                          <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.rate}}</span>
+                          <span class="amenities2">(taxes are $0.07 PSF)</span>
+                      </td>
+                      <td width="400px" valign="top" class="bodyContent">
+                        <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.sq-footage}} SF</span>
+                      </td>
+                      <td width="50px"></td>
+                    </tr>
+                    <tr>
+                      <td width="50px"></td>
+                      <td width="400px" valign="top" class="bodyContent">
+                          <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.rate}}</span>
+                          <span class="amenities2">(taxes are $0.07 PSF)</span>
+                      </td>
+                      <td width="400px" valign="top" class="bodyContent">
+                        <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.sq-footage}} SF</span>
+                      </td>
+                      <td width="50px"></td>
+                    </tr>
+              </table>
+              <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
+                <tr>
+                  <td width="50px"></td>
+                  <td width="800px">
+                    <strong>BUILDING HIGHLIGHTS</strong>
+                      <ul class="list">
+                        {% for highlight in page.highlights %}
+                          <li>{{ highlight }}</li>
+                        {% endfor %}
+                      </ul>
+                  </td>
+                  <td width="50px"></td>
+                </tr>
+                <tr>
+                  <td width="50px"></td>
+                  <td width="800px">
+                    <strong>AMENITIES</strong>
+                      <ul class="list">
+                        {% for amenity in page.amenities %}
+                          <li>{{ amenity }}</li>
+                        {% endfor %}
+                      </ul>
+                  </td>
+                  <td width="50px"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        <tr>
+          <td>
+            <table>
+              <td width="50px"></td>
+              <td width="800px"></td>
+                <img src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=1&size=800x400&maptype=roadmap&format=png&visual_refresh=true" />
+              <td width="50px"></td>
+            </table>
+          </td>
+        </tr>
+        </table>
+    </body>
+    </html>
