--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -226,15 +226,15 @@
             </td>
           </tr>
         <tr>
-          <td>
-            <table>
+          <td align="center" valign="top">
+            <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
               <td width="50px"></td>
               <td width="800px"></td>
-                <img src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=1&size=800x400&maptype=roadmap&format=png&visual_refresh=true" />
+                <img src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true" />
               <td width="50px"></td>
             </table>
           </td>
         </tr>
-        </table>
+      </table>
     </body>
     </html>
