--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -14,144 +14,6 @@
     body {
       font-family:'Lato', sans-serif;
     }
-    .address {
-      color:#484747 !important;
-      display:block;
-      font-family:'Lato', sans-serif;
-      font-size:24px;
-      font-style:normal;
-      font-weight:light;
-      line-height:100%;
-      letter-spacing:normal;
-      margin-top:0;
-      margin-right:0;
-      margin-bottom:10px;
-      margin-left:0;
-      text-align:left;
-    }
-    .address_city {
-      color:#484747 !important;
-      display:block;
-      font-family:'Lato', sans-serif;
-      font-size:42px;
-      font-style:normal;
-      font-weight:regular;
-      line-height:100%;
-      letter-spacing:normal;
-      margin-top:0;
-      margin-right:0;
-      margin-bottom:10px;
-      margin-left:0;
-      text-align:left;
-    }
-    .bodyContent{
-      color:#737373;
-      font-family:'Lato', sans-serif;
-      font-size:20px;
-      line-height:140%;
-      padding-top:20px;
-      padding-right:50px;
-      padding-bottom:20px;
-      padding-left:50px;
-      /*@editable*/ text-align:left;
-    }
-    .amenities {
-      color:#5e5e5e;
-      font-family:'Lato', sans-serif;
-      font-size:22px;
-      font-weight:700;
-      line-height:140%;
-    }
-    .amenities2 {
-      color:#989899;
-      font-family:'Lato', sans-serif;
-      font-size:22px;
-      font-weight:200;
-      line-height:140%;
-      font-style:italic;
-    }
-    .2column_image {
-      margin-right:1px !important;
-      float:left;
-    }
-    .a_icons {
-      padding-right:12px;
-    }
-    .headerContent {
-      position: relative;
-    }
-    .details-button {
-      position: absolute;
-      bottom: 5px;
-      left: 33px;
-      width: 200px;
-      border-radius: 500px;
-      margin-top: 22px;
-      font-weight: 500;
-      font-size: 22px;
-      color: white;
-      background-color: #d46049;
-      border-color: #c04d3a;
-      border-style: solid;
-      border-width: thin;
-      padding: 16px 26px;
-      text-transform: uppercase;
-      text-decoration: none;
-      text-align: center;
-    }
-
-    .listing-label {
-      position: absolute;
-      right: 0px;
-      top: -8px;
-      font-family:'Lato', sans-serif;
-      font-size: 26px;
-      color: white;
-      padding: 8px 37px;
-    }
-    .rent-label {
-      background-color: #d46049;
-    }
-    .lease-label {
-      background-color: #3678c6;
-    }
-    .static-g-map {
-      width: 900px;
-    }
-    .border-bottom {
-      border-bottom: solid thin #DCDCDC;
-    }
-    .border-right {
-      border-right: solid thin #DCDCDC;
-    }
-
-    .table {
-      background-color:white;
-    }
-
-    .amenities__table {
-      margin: 18px 0;
-    }
-
-    .highlights__table {
-      font-size: 22px;
-      margin: 18px 0;
-    }
-
-    .table__footer {
-      background-color: #cc6633;
-      font-size: 14px;
-      color: white;
-    }
-
-    .list-header {
-      font-weight: 800;
-    }
-
-    .footer-header {
-      font-weight: 800;
-      font-size: 18px;
-    }
   </style>
 </head>
 
@@ -163,7 +25,10 @@
           <tr>
             <td width="50" height="54"></td>
             <td width="362" height="54"><img src="/images/newsletter/img/gs-newsletter-s1.jpg" width="362" height="54" alt="Groundsource Logo" /></td>
-            <td width="438" class="bodyContent" style="text-align:right" valign="top" height="54"><img src="/images/newsletter/img/gs-newsletter-s2.jpg" width="31" height="31" alt="Phone Icon" />{{site.data.contact.phone}}</td>
+            <td width="438" class="bodyContent" style="text-align:right" valign="top" height="54">
+              <img src="/images/newsletter/img/gs-newsletter-s2.jpg" class="phone-icon" width="31" height="31" alt="Phone Icon" />
+              {{site.data.contact.phone}}
+            </td>
             <td width="50px" height="54">&nbsp;</td>
           </tr>
           <tr>
@@ -184,7 +49,7 @@
     <tr>
       <td align="center" valign="top">
         <!-- BEGIN BODY // -->
-        <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color: white;">
+        <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table">
           <tr>
             <td width="50px"></td>
             <td width="800px" valign="top" class="bodyContent">
@@ -198,7 +63,7 @@
               <td width="50px"></td>
               <td width="800px">
                 {% if page.gallery-images[0] %}
-                <span class="2column_image">
+                <span class="column_image2">
                   <img src="{{ page.gallery-images[0] }}" width="398" height="300" class="2column_image" />
                 </span>
                 {% endif %}
@@ -219,23 +84,23 @@
               <tr>
                 <td width="50px"></td>
                 <td width="400px" valign="top" class="bodyContent border-right border-bottom">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.rate}}</span>
+                  <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" /> <span class="amenities">{{page.rate}}</span>
                   <span class="amenities2">(taxes are $0.07 PSF)</span>
                 </td>
                 <td width="400px" valign="top" class="bodyContent border-bottom">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="54" height="54" alt="Rate" /> <span class="amenities">{{page.sq-footage}} SF</span>
+                  <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" /> <span class="amenities">{{page.sq-footage}} SF</span>
                 </td>
                 <td width="50px"></td>
               </tr>
               <tr>
                 <td width="50px"></td>
                 <td width="400px" valign="top" class="bodyContent border-right">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="54" height="54" alt="Rate" />
+                  <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
                   <span class="amenities"><strong>Available:</strong>January 1, 2018</span>
                   <span class="amenities2"></span>
                 </td>
                 <td width="400px" valign="top" class="bodyContent">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="54" height="54" alt="Rate" />
+                  <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
                   <span class="amenities"><strong>{{page.parking}} Spaces</span>
                   </td>
                   <td width="50px"></td>
