--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "listings.scss";
 @import "about.scss";
 @import "experience.scss";
+@import "newsletter.scss";
 
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
