--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -138,7 +138,7 @@
             <td align="center" valign="top">
               <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
                 <td width="900px">
-                  <img class="static-g-map" src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}" />
+                  <!-- <img class="static-g-map" src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}" /> -->
                 </td>
               </table>
             </td>
