--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -137,9 +137,11 @@
           <tr>
             <td align="center" valign="top">
               <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
-                <td width="900px">
-                  <!-- <img class="static-g-map" src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}" /> -->
-                </td>
+                <tr>
+                  <td width="900px">
+                    <img class="static-g-map" src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}" />
+                  </td>
+                </tr>
               </table>
             </td>
           </tr>
