Make some newsletter edits.

--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -1,4 +1,4 @@
-.address {
+.address-newsletter {
   color:#484747 !important;
   display:block;
   font-family:'Lato', sans-serif;
@@ -84,7 +84,7 @@
   text-align: center;
 }
 
-.listing-label {
+.listing-label-newsletter {
   position: absolute;
   right: 0px;
   top: -8px;
@@ -100,7 +100,8 @@
   background-color: #3678c6;
 }
 .static-g-map {
-  width: 900px;
+  width: 800px;
+  padding-bottom: 43px;
 }
 .border-bottom {
   border-bottom: solid thin #DCDCDC;
