--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -34,13 +34,15 @@
           <tr>
             <td valign="top" class="headerContent" colspan="5">
               {% if page.lease %}
-              <div class="listing-label lease-label">For Lease</div>
+              <div class="listing-label-newsletter lease-label">For Lease</div>
               {% endif %}
               {% if page.sale %}
-              <div class="listing-label rent-label">For Sale</div>
+              <div class="listing-label-newsletter rent-label">For Sale</div>
               {% endif %}
-              <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html"><div class="details-button">View Details</div></a>
               <img src="{{page.property-header}}" style="max-width:900px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
+              <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
+                <div class="details-button">View Details</div>
+              </a>
             </td>
           </tr>
         </table>
@@ -53,7 +55,7 @@
           <tr>
             <td width="50px"></td>
             <td width="800px" valign="top" class="bodyContent">
-              <span class="address">{{page.address-line-1}}</span>
+              <span class="address-newsletter">{{page.address-line-1}}</span>
               <span class="address_city"><b>{{page.address-line-2}}</span>
                 {{page.info-text}}
               </td>
@@ -136,11 +138,13 @@
           </tr>
           <tr>
             <td align="center" valign="top">
-              <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;">
+              <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table">
                 <tr>
-                  <td width="900px">
+                  <td width="50px"></td>
+                  <td width="800px">
                     <img class="static-g-map" src="https://maps.googleapis.com/maps/api/staticmap?center={{page.latitude}}+{{page.longitude}}&zoom=13&scale=2&size=640x400&maptype=roadmap&format=png&visual_refresh=true&key={{site.data.contact.staticGMap}}" />
                   </td>
+                  <td width="50px"></td>
                 </tr>
               </table>
             </td>
