--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -140,7 +140,7 @@
           </tr>
           <tr>
             <td align="center" valign="top">
-              <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table">
+              <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table table__map">
                 <tr>
                   <td width="50px"></td>
                   <td width="800px">
