Make color of footer and button match the color of the GS logo.

--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -68,8 +68,8 @@
   font-weight: 500;
   font-size: 19px;
   color: white;
-  background-color: #d46049;
-  border-color: #c04d3a;
+  background-color: #d85744;
+  border-color: #d85744;
   border-style: solid;
   border-width: thin;
   padding: 11px 26px;
@@ -132,7 +132,7 @@
 }
 
 .table__footer {
-  background-color: #d46049;
+  background-color: #d85744;
   font-size: 14px;
   color: white;
   margin: 0;
