Reduce gradient height. Shorten height of gmap. Add padding around amenities.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -55,8 +55,8 @@
               <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
                 <div class="details-button">View Details</div>
               </a>
-              <span class="address-newsletter uppercase">{{page.address-line-1}}</span>
-              <span class="address_city uppercase"><b>{{page.address-line-2}}</span>
+              <span class="address-newsletter newsletter-address">{{page.address-line-1}}</span>
+              <span class="address_city newsletter-address"><b>{{page.address-line-2}}</span>
                 {{page.info-text}}
               </td>
               <td width="50px"></td>
@@ -85,27 +85,27 @@
             <!-- <table border="0" cellpadding="0" cellspacing="0" width="900px" style="background-color:#dcdbdb;"> -->
               <tr>
                 <td width="50px"></td>
-                <td width="400px" valign="top" class="bodyContent border-right border-bottom">
+                <td width="400px" valign="top" class="bodyContent border-right border-bottom padding-right">
                   <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><span class="strong">{{page.rate}}</span></span>
-                  <span class="amenities2">(taxes are $0.07 PSF)</span>
+                  <span class="newsletter-amenities"><span class="strong">{{page.rate}}</span></span>
+                  <div class="newsletter-amenities2">(taxes are $0.07 PSF)</div>
                 </td>
                 <td width="400px" valign="top" class="bodyContent border-bottom padding-left">
                   <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><span class="strong">{{page.sq-footage}}</span> SF</span>
+                  <span class="newsletter-amenities"><span class="strong">{{page.sq-footage}}</span> Square Feet</span>
                 </td>
                 <td width="50px"></td>
               </tr>
               <tr>
                 <td width="50px"></td>
-                <td width="400px" valign="top" class="bodyContent border-right">
+                <td width="400px" valign="top" class="bodyContent border-right padding-right">
                   <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><span class="strong">Available:</span> January 1, 2018</span>
-                  <span class="amenities2"></span>
+                  <span class="newsletter-amenities"><span class="strong">Available:</span> January 1, 2018</span>
+                  <span class="newsletter-amenities2"></span>
                 </td>
                 <td width="400px" valign="top" class="bodyContent padding-left">
                   <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><strong><span class="strong">{{page.parking}}</span> Spaces</span>
+                  <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span> Spaces</span>
                   </td>
                   <td width="50px"></td>
                 </tr>
