--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -165,6 +165,7 @@
 .newsletter-address {
   text-transform: uppercase;
   text-decoration: none !important;
+  color: black !important;
 }
 
 .strong {
