--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -55,8 +55,8 @@
               <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
                 <div class="details-button">View Details</div>
               </a>
-              <span class="address-newsletter newsletter-address">{{page.address-line-1}}</span>
-              <span class="address_city newsletter-address"><b>{{page.address-line-2}}</span>
+              <span class="address-newsletter newsletter-address"><a style="text-decoration: none; color: black;">{{page.address-line-1}}</a></span>
+              <span class="address_city newsletter-address"><b><a style="text-decoration: none; color: black;">{{page.address-line-2}}</a></span>
                 {{page.info-text}}
               </td>
               <td width="50px"></td>
