--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -18,7 +18,7 @@
 </head>
 
 <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="color: black; font-size: 16px; background-color:white;">
-    <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center" style="margin:0px auto; padding:0px; background-color: white;">
+    <table border="0" cellpadding="0" cellspacing="0" width="900px" height="100%" align="center" style="margin:0px auto; padding:0px; background-color: white;">
     <tr>
       <td>
         <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center" id="templateHeader" bgcolor="#ffffff" style="background-color:#ffffff">
