--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -150,12 +150,12 @@
       </tr>
       <tr>
         <td align="center" valign="top">
-          <table border="0" cellpadding="8" cellspacing="0" width="900px" class="table table__footer">
+          <table border="0" cellpadding="8" cellspacing="0" width="800px" class="table table__footer">
             <tr>
               <td width="50px"></td>
-              <td width="250px" class="footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
+              <td width="250px" class="newsletter-footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
               <td width="400px"></td>
-              <td class="footer-header" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
+              <td class="newsletter-footer-header" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
                 <td width="50px"></td>
             </tr>
             <tr>
@@ -181,7 +181,7 @@
             </tr>
             <tr>
               <td width="50px"></td>
-              <td width="250px"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
+              <td width="250px" class="newsletter-bottom-cell"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
               <td width="400px"></td>
               <td width="150px"></td>
               <td width="50px"></td>
