--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -145,11 +145,6 @@
   font-size: 16px;
 }
 
-.footer-header {
-  font-weight: 800;
-  font-size: 16px;
-}
-
 .phone-icon {
   margin-right: 6px;
 }
@@ -166,6 +161,16 @@
   text-transform: uppercase;
   text-decoration: none !important;
   color: black !important;
+}
+
+.newsletter-footer-header {
+  font-weight: 800;
+  font-size: 16px;
+  padding-top: 25px;
+}
+
+.newsletter-bottom-cell {
+  padding-bottom: 25px;
 }
 
 .strong {
