More fine-tuning of the newsletter and moved some inline styles to the stylesheet.

--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -1,7 +1,6 @@
 .address-newsletter {
   color:#484747 !important;
   display:block;
-  font-family:'Lato', sans-serif;
   font-size: 24px;
   font-style:normal;
   font-weight:light;
@@ -16,7 +15,6 @@
 .address_city {
   color:#484747 !important;
   display:block;
-  font-family:'Lato', sans-serif;
   font-size:42px;
   font-style:normal;
   font-weight:regular;
@@ -29,21 +27,26 @@
   text-align:left;
 }
 .bodyContent{
-  font-family:'Lato', sans-serif;
   line-height:140%;
   padding-top:20px;
   padding-bottom:20px;
-  /*@editable*/ text-align:left;
+  text-align:left;
+}
+
+.newsletter-phone {
+  text-align: right;
+}
+
+.newsletter-property-header-image {
+  max-width:900px;
 }
 .newsletter-amenities {
   color:#5e5e5e;
-  font-family:'Lato', sans-serif;
   font-weight:700;
   line-height:140%;
 }
 .newsletter-amenities2 {
   color:#989899;
-  font-family:'Lato', sans-serif;
   font-weight:200;
   line-height:140%;
   font-style:italic;
@@ -80,7 +83,6 @@
 }
 
 .listing-label-newsletter {
-  font-family:'Lato', sans-serif;
   font-size: 26px;
   color: white;
   padding: 8px 52px;
@@ -103,6 +105,12 @@
 }
 .border-right {
   border-right: solid thin #DCDCDC;
+}
+
+.container-table {
+  margin:0px auto;
+  padding:0px;
+  background-color: white;
 }
 
 .table {
@@ -141,6 +149,9 @@
   font-size: 14px;
   color: white;
   margin: 0;
+  td {
+    padding-bottom: 8px;
+  }
 }
 
 .list-header {
@@ -168,6 +179,10 @@
   text-transform: uppercase;
   text-decoration: none !important;
   color: black !important;
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .newsletter-footer-header {
@@ -177,7 +192,7 @@
 }
 
 .newsletter-bottom-cell {
-  padding-bottom: 25px;
+  padding-bottom: 25px !important;
 }
 
 .strong {
