--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -17,15 +17,15 @@
     </style>
   </head>
 
-  <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="color: black; font-size: 16px; background-color:white;">
-    <table border="0" cellpadding="0" cellspacing="0" width="900px" height="100%" align="center" style="margin:0px auto; padding:0px; background-color: white;">
+  <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="color: black; font-size: 16px; font-family: Helvetica, Arial; background-color:white;">
+    <table border="0" cellpadding="0" cellspacing="0" width="900px" height="100%" align="center" class="container-table">
       <tr>
         <td>
-          <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center" id="templateHeader" bgcolor="#ffffff" style="background-color:#ffffff">
+          <table border="0" cellpadding="0" cellspacing="0" width="900px" align="center">
             <tr>
               <td width="50" height="54"></td>
               <td width="362" height="54"><img src="/images/newsletter/img/gs-newsletter-s1.jpg" width="362" height="54" alt="Groundsource Logo" /></td>
-              <td width="438" class="bodyContent" style="text-align:right" valign="top" height="54">
+              <td width="438" class="newsletter-phone bodyContent" valign="top" height="54">
                 <img src="/images/newsletter/img/gs-newsletter-s2.jpg" class="phone-icon" width="31" height="31" alt="Phone Icon" />
                 {{site.data.contact.phone}}
               </td>
@@ -39,7 +39,7 @@
                 {% if page.sale %}
                 <div class="listing-label-newsletter rent-label">FOR SALE</div>
                 {% endif %}
-                <img src="{{page.property-header}}" style="max-width:900px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
+                <img src="{{page.property-header}}" class="newsletter-property-header-image" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
               </td>
             </tr>
           </table>
@@ -54,8 +54,8 @@
               <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
                 <div class="details-button">View Details</div>
               </a>
-              <span class="address-newsletter newsletter-address"><a style="text-decoration: none; color: black;">{{page.address-line-1}}</a></span>
-              <span class="address_city newsletter-address"><b><a style="text-decoration: none; color: black;">{{page.address-line-2}}</a></span>
+              <span class="address-newsletter newsletter-address">{{page.address-line-1}}</span>
+              <span class="address_city newsletter-address"><b>{{page.address-line-2}}</span>
                 {{page.info-text}}
               </td>
               <td width="50px"></td>
@@ -102,7 +102,7 @@
               </td>
               <td width="400px" valign="top" class="bodyContent padding-left">
                 <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span> Spaces</span>
+                <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span> Parking Spaces</span>
                 </td>
                 <td width="50px"></td>
               </tr>
@@ -154,7 +154,7 @@
       </tr>
       <tr>
         <td align="center" valign="top">
-          <table border="0" cellpadding="8" cellspacing="0" width="900px" class="table table__footer">
+          <table border="0" cellspacing="0" width="900px" class="table table__footer">
             <tr>
               <td width="50px"></td>
               <td width="250px" class="newsletter-footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
@@ -178,9 +178,9 @@
             </tr>
             <tr>
               <td width="50px"></td>
-              <td class="footer-header" width="250px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
+              <td class="newsletter-footer-header" width="250px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
               <td width="400px"></td>
-              <td class="footer-header" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
+              <td class="newsletter-footer-header" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
