Text align the footer.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -159,28 +159,28 @@
               <td width="50px"></td>
               <td width="250px" class="newsletter-footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
               <td width="400px"></td>
-              <td class="newsletter-footer-header" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
+              <td class="newsletter-footer-header newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
                 <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="250px"><a href="{{site.contact.url}}/listings.html?type=buy">Properties For Sale</a></td>
               <td width="400px"></td>
-              <td width="150px"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
+              <td width="150px" class="newsletter-footer-right"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="250px"><a href="{{site.contact.url}}/listings.html?type=lease">Properties For Lease</a></td>
               <td width="400px"></td>
-              <td width="150px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
+              <td class="newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td class="newsletter-footer-header" width="250px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
               <td width="400px"></td>
-              <td class="newsletter-footer-header" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
+              <td class="newsletter-footer-header newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
