--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -54,6 +54,10 @@
   margin-top: -10px;
 }
 
+.newsletter-footer-right {
+  padding-left: 35px;
+}
+
 .column_image2 {
   margin-right:1px !important;
   float:left;
