Use more width in separator TD in lieu of padding-left (didnt display correctly on Gmail).

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -54,8 +54,8 @@
               <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
                 <div class="details-button">View Details</div>
               </a>
-              <span class="address-newsletter newsletter-address">{{page.address-line-1}}</span>
-              <span class="address_city newsletter-address"><b>{{page.address-line-2}}</span>
+              <span class="address-newsletter newsletter-address"><a>{{page.address-line-1}}</a></span>
+              <span class="address_city newsletter-address"><b><a>{{page.address-line-2}}</a></span>
                 {{page.info-text}}
               </td>
               <td width="50px"></td>
@@ -158,36 +158,36 @@
             <tr>
               <td width="50px"></td>
               <td width="250px" class="newsletter-footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
-              <td width="400px"></td>
-              <td class="newsletter-footer-header newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
+              <td width="425px"></td>
+              <td class="newsletter-footer-header" width="125px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
                 <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="250px"><a href="{{site.contact.url}}/listings.html?type=buy">Properties For Sale</a></td>
-              <td width="400px"></td>
-              <td width="150px" class="newsletter-footer-right"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
+              <td width="425px"></td>
+              <td width="125px"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="250px"><a href="{{site.contact.url}}/listings.html?type=lease">Properties For Lease</a></td>
-              <td width="400px"></td>
-              <td class="newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
+              <td width="425px"></td>
+              <td width="125px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td class="newsletter-footer-header" width="250px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
-              <td width="400px"></td>
-              <td class="newsletter-footer-header newsletter-footer-right" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
+              <td width="425px"></td>
+              <td class="newsletter-footer-header" width="125px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
               <td width="50px"></td>
             </tr>
             <tr>
               <td width="50px"></td>
               <td width="250px" class="newsletter-bottom-cell"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
-              <td width="400px"></td>
-              <td width="150px"></td>
+              <td width="425px"></td>
+              <td width="125px"></td>
               <td width="50px"></td>
             </tr>
             </tr>
