--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -8,7 +8,7 @@
   letter-spacing:normal;
   margin-top:0;
   margin-right:0;
-  margin-bottom:10px;
+  margin-bottom:20px;
   margin-left:0;
   text-align:left;
 }
@@ -50,7 +50,7 @@
   font-weight:200;
   line-height:140%;
   font-style:italic;
-  padding-left: 67px;
+  padding-left: 30px;
   margin-top: -10px;
 }
 
@@ -67,8 +67,8 @@
 .details-button {
   width: 251px;
   border-radius: 500px;
-  margin-top: -15px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   font-weight: 500;
   font-size: 19px;
   color: white;
@@ -90,6 +90,10 @@
 
 .newsletter-highlights {
   color: #666666;
+}
+
+.newsletter-info-text {
+  padding-bottom: 20px;
 }
 .rent-label {
   background-color: #d46049;
@@ -122,6 +126,7 @@
   padding: 18px 0;
   td {
     vertical-align: middle;
+    text-align: center !important;
   }
   tr {
     height: 115px;
