Add link to home/services in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,10 @@
 <div class="footer">
   <div class="inner">
     <div class="column">
+      <div class="title"><a href="/index.html">HOME</a></div>
+      <a href="/index.html?section=services">Services</a>
+    </div>
+    <div class="column">
       <div class="title"><a href="/listings.html">LISTINGS</a></div>
       <a href="/listings.html?type=buy">Properties For Sale</a>
       <a href="/listings.html?type=lease">Properties For Lease</a>
