--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -206,6 +206,10 @@
           $('.main').addClass('modal-open');
           $('.contact-us-modal').fadeIn();
           $('.nav-modal').fadeOut();
+        } else if (sectionQuery === "services") {
+          window.setTimeout(function() {
+            window.scrollTo(0, $('.services-content').offset().top);
+          }, 500)
         }
 
         $(logo).addClass("prepareSlideUp");
