Swap the newsletter footer out for a much more basic version.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -155,40 +155,10 @@
         <td align="center" valign="top">
           <table border="0" cellspacing="0" width="900px" class="table table__footer">
             <tr>
-              <td width="50px"></td>
-              <td width="250px" class="newsletter-footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
-              <td width="425px"></td>
-              <td class="newsletter-footer-header" width="125px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
-                <td width="50px"></td>
+              <td class="newsletter-footer-header" align="center" valign="top">CONTACT US</td>
             </tr>
             <tr>
-              <td width="50px"></td>
-              <td width="250px"><a href="{{site.contact.url}}/listings.html?type=buy">Properties For Sale</a></td>
-              <td width="425px"></td>
-              <td width="125px"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
-              <td width="50px"></td>
-            </tr>
-            <tr>
-              <td width="50px"></td>
-              <td width="250px"><a href="{{site.contact.url}}/listings.html?type=lease">Properties For Lease</a></td>
-              <td width="425px"></td>
-              <td width="125px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
-              <td width="50px"></td>
-            </tr>
-            <tr>
-              <td width="50px"></td>
-              <td class="newsletter-footer-header" width="250px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
-              <td width="425px"></td>
-              <td class="newsletter-footer-header" width="125px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
-              <td width="50px"></td>
-            </tr>
-            <tr>
-              <td width="50px"></td>
-              <td width="250px" class="newsletter-bottom-cell"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
-              <td width="425px"></td>
-              <td width="125px"></td>
-              <td width="50px"></td>
-            </tr>
+              <td class="newsletter-footer-bottom" align="center">{{site.data.contact.address}} | <a class="newsletter-home-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
             </tr>
           </table>
         </td>
