ovverride email links..

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -158,7 +158,7 @@
               <td class="newsletter-footer-header" align="center" valign="top">CONTACT US</td>
             </tr>
             <tr>
-              <td class="newsletter-footer-bottom" align="center">{{site.data.contact.address}} | <a class="newsletter-home-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
+              <td class="newsletter-footer-bottom" align="center"><a class="email-link">{{site.data.contact.address}}</a> | <a class="newsletter-home-link email-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
             </tr>
           </table>
         </td>
