Link contact-us to homepage on website.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -155,7 +155,7 @@
         <td align="center" valign="top">
           <table border="0" cellspacing="0" width="900px" class="table table__footer">
             <tr>
-              <td class="newsletter-footer-header" align="center" valign="top">CONTACT US</td>
+              <td class="newsletter-footer-header" align="center" valign="top"><a class="email-link" href="{{site.contact.url}}/index.html?section=contact">CONTACT US</a></td>
             </tr>
             <tr>
               <td class="newsletter-footer-bottom" align="center"><a class="email-link">{{site.data.contact.address}}</a> | <a class="newsletter-home-link email-link" href="{{site.data.contact.url}}">GROUNDSOURCE.NET</a>
