Add a link to Services in the hamburger and home page top menu.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -75,6 +75,7 @@
           <div class="menu-close"></div>
           <ul class="nav">
             <li><a href="/index.html">HOME</a></li>
+            <li><a href="index.html?section=services">SERVICES</a></li>
             <li><a href="/listings.html" class="active">LISTINGS</a></li>
             <li><a href="/experience.html">EXPERIENCE</a></li>
             <li><a href="/about.html">ABOUT </a></li>
