--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -24,6 +24,7 @@
           <div class="menu-close"></div>
           <ul class="nav">
             <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html?section=services">SERVICES</a></li>
             <li><a class="active" href="listings.html">LISTINGS</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="about.html">ABOUT</a></li>
