--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -59,6 +59,7 @@
       </div>
       <div id="top-nav">
         <ul>
+          <li><a class="services-home-button">SERVICES</a></li>
           <li><a href="listings.html">LISTINGS</a></li>
           <li><a href="experience.html">EXPERIENCE</a></li>
           <li><a href="about.html">ABOUT</a></li>
@@ -71,8 +72,9 @@
         <div class="inner">
           <img src="images/logo.png" class="modal-logo"/>
           <div class="menu-close"></div>
-          <ul class="nav">
+          <ul class="nav ham-nav">
             <li><a class="active" href="/">HOME</a></li>
+            <li><a class="services-ham-home" href="index.html?section=services">SERVICES</a></li>
             <li><a href="listings.html">LISTINGS</a></li>
             <li><a href="experience.html">EXPERIENCE</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -185,6 +187,10 @@
     {% include include-scripts.html %}
     <script>
       $(document).ready(function() {
+        $(".services-home-button").click(function() {
+          scrollToServices();
+        })
+
         var logo = $("#header-logo");
 
         $(".testimonial-text").each(function() {
@@ -208,7 +214,7 @@
           $('.nav-modal').fadeOut();
         } else if (sectionQuery === "services") {
           window.setTimeout(function() {
-            window.scrollTo(0, $('.services-content').offset().top);
+            scrollToServices()
           }, 500)
         }
 
@@ -246,9 +252,14 @@
           map: map
         });
       }
+      function scrollToServices() {
+        $(".active").removeClass("active");
+        $('.services-ham-home').addClass('active')
+        window.scrollTo(0, $('.services-content').offset().top);
+      }
     </script>
     <!-- TODO replace API key -->
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhoAiw62lFQnHpIqeqYJVu1KfRkcitEN0&callback=initHomeMap">
-</script>
+    </script>
   </body>
