Update text in footer links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
     </div>
     <div class="column">
       <div class="title"><a href="/listings.html">LISTINGS</a></div>
-      <a href="/listings.html?type=buy">Properties For Sale</a>
-      <a href="/listings.html?type=lease">Properties For Lease</a>
+      <a href="/listings.html?type=buy">Listings For Sale</a>
+      <a href="/listings.html?type=lease">Listings For Lease</a>
     </div>
     <div class="column">
       <div class="title"><a href="/experience.html">EXPERIENCE</a></div>
