Place contact us info under the header. Set overflow to auto (not scroll.)

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -16,7 +16,7 @@
     </div>
     <div>
       <img src="/images/ig-icon.png" class="icon-small"/>
-      <span><a href="https://www.instagram.com/{{site.data.instagram}}">@{{site.data.contact.instagram}}</a></span>
+      <span><a href="https://www.instagram.com/{{site.data.instagram}}">{{site.data.contact.instagram}}</a></span>
     </div>
   </div>
 </div>
