--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -173,7 +173,7 @@ a {
 .contact-info-body {
   font-size: .9em;
   background: rgba(255, 255, 255, 0.9);
-  padding: 15px 22px 34px 22px;
+  padding: 15px 0;
   color: #858585;
   width: 72%;
   text-align: center;
@@ -438,11 +438,8 @@ a {
 .contact-us-modal {
   @include modal;
   .inner {
-    overflow: scroll;
+    overflow-y: auto;
     height: 60%;
-  }
-  .contact-us-modal__info {
-    margin-top: 85px;
   }
   .contact-close {
     @include close-button;
@@ -474,6 +471,7 @@ a {
       width: 72%;
       height: 2.8em;
       opacity: .8;
+      text-indent: 18px;
       border-style: solid;
       border-width: thin;
       border-color: #efefef;
@@ -1233,7 +1231,7 @@ a {
   .contact-us-modal {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
     .inner {
       position: absolute;
       top: 0;
