Remove underlines from contact us section.. put in place for hover only.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -164,6 +164,15 @@ a {
         padding-left: 11px;
         > li {
           padding: 6px;
+          cursor: pointer;
+          &:hover {
+            > * {
+              text-decoration: underline;
+            }
+          }
+          > * {
+            text-decoration: none;
+          }
         }
       }
     }
