Stop hard-coding the parking description. Stop hard coding newsletter property available date.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -97,11 +97,11 @@
               <td width="50px"></td>
               <td width="400px" valign="top" class="bodyContent border-right">
                 <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><span class="strong">Available:</span> January 1, 2018</span>
+                <span class="newsletter-amenities"><span class="strong">Available:</span> {{page.date}}</span>
               </td>
               <td width="400px" valign="top" class="bodyContent">
                 <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span> Parking Spaces</span>
+                <span class="newsletter-amenities"><strong><span class="strong">{{page.parking}}</span>
                 </td>
                 <td width="50px"></td>
               </tr>
