--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -141,7 +141,7 @@
                           <td>
                             <div class="wrapped-text">
                               <img src="images/icons/car.svg" />
-                              <span>{{listing.parking}} Spots</span>
+                              <span>{{listing.parking}}</span>
                             </div>
                           </td>
                         </tr>
